# volovo

./: .gitignore  AUDIT.md  README.md  main.py  movement.py  pgdb.py  putevoy.html  pyproject.toml
putevoy/: index.html  index.html.bak.2026-02-08_112306
putevoy/css/: app.css
putevoy/js/: app.js  app.js.bak.2026-02-08_112306
src/volovo/: __init__.py  main.py  movement.py
volovo/: putevoy.html
