[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volovo"
version = "0.1.0"
description = "Volovo application"
requires-python = ">=3.10"
authors = [{ name = "Unknown" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["volovo*"]